# rbtc

./: .gitignore  Cargo.toml  Dockerfile  Plan.md  README.md  ROADMAP.md  docker-compose.yml
crates/rbtc-consensus/: Cargo.toml
crates/rbtc-consensus/src/: block_verify.rs  blockfilter.rs  chain.rs  difficulty.rs  error.rs  lib.rs  script_exec_cache.rs  script_flags.rs  tx_verify.rs  utxo.rs  versionbits.rs
crates/rbtc-consensus/tests/: blockfilter_tests.rs  tx_tests.rs
crates/rbtc-crypto/: Cargo.toml
crates/rbtc-crypto/src/: aes.rs  cleanse.rs  digest.rs  hmac.rs  lib.rs  merkle.rs  message.rs  muhash.rs  random.rs  sig.rs  sigcache.rs  sighash.rs  siphash.rs
crates/rbtc-crypto/tests/: sighash_tests.rs
crates/rbtc-mempool/: Cargo.toml
crates/rbtc-mempool/src/: entry.rs  error.rs  fee_estimator.rs  lib.rs  linearize.rs  orphan.rs  persist.rs  policy.rs  pool.rs
crates/rbtc-miner/: Cargo.toml
crates/rbtc-miner/src/: error.rs  gbt.rs  lib.rs  longpoll.rs  selector.rs  signet.rs  template.rs  worker.rs
crates/rbtc-net/: Cargo.toml
crates/rbtc-net/src/: addrman.rs  anchors.rs  bip324.rs  block_download.rs  bloom.rs  compact.rs  error.rs  lib.rs  message.rs  orphan.rs  peer.rs  peer_manager.rs  permissions.rs  rate_limiter.rs  reconciliation.rs  timeoffsets.rs  transport.rs
crates/rbtc-net/tests/: bitcoin_core_integration.rs
crates/rbtc-node/: Cargo.toml
crates/rbtc-node/src/: checkpoints.rs  config.rs  headers_sync.rs  ibd.rs  lib.rs  main.rs  node.rs  rpc.rs  rpc_auth.rs  utxo_cache.rs  validation_interface.rs
crates/rbtc-primitives/: Cargo.toml
crates/rbtc-primitives/src/: block.rs  block_status.rs  checkpoints.rs  codec.rs  constants.rs  hash.rs  lib.rs  network.rs  opcodes.rs  script.rs  transaction.rs  uint256.rs
crates/rbtc-psbt/: Cargo.toml
crates/rbtc-psbt/src/: error.rs  lib.rs  roles.rs  serialize.rs  signer.rs  types.rs
crates/rbtc-script/: Cargo.toml
crates/rbtc-script/src/: engine.rs  lib.rs  opcode.rs  sigops.rs  standard.rs
crates/rbtc-script/tests/: script_tests.rs
crates/rbtc-script/tests/fixtures/: segwit_vectors.json  taproot_vectors.json
crates/rbtc-storage/: Cargo.toml
crates/rbtc-storage/src/: addr_index_store.rs  block_status.rs  block_store.rs  chain_store.rs  compress.rs  db.rs  error.rs  flat_file.rs  lib.rs  peer_store.rs  snapshot.rs  tx_index_store.rs  utxo_store.rs
crates/rbtc-wallet/: Cargo.toml
crates/rbtc-wallet/src/: account.rs  address.rs  descriptor.rs  error.rs  external_signer.rs  hd.rs  keypool.rs  lib.rs  mnemonic.rs  multisig.rs  trusted_tests.rs  tx_analysis_tests.rs  tx_builder.rs  tx_store.rs  wallet.rs  wallet_db.rs  wallet_store.rs  watch_only.rs  wif.rs
crates/rbtc-wallet/tests/: base58_tests.rs  bip341_tests.rs  key_io_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_block_header.rs  fuzz_script_eval.rs  fuzz_tx_decode.rs
scripts/: benchmark_connect_perf.sh  coverage.sh
tools/: check_utxo.rs
