[package]
name    = "rbtc-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
experimental-input-parallel = []

[dependencies]
rbtc-primitives = { workspace = true }
rbtc-crypto     = { workspace = true }
rbtc-script     = { workspace = true }
thiserror       = { workspace = true }
rayon           = { workspace = true }
tracing         = { workspace = true }
