[package]
name    = "rbtc-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rbtc-primitives = { workspace = true }
secp256k1       = { workspace = true }
sha2            = { workspace = true }
ripemd          = { workspace = true }
thiserror       = { workspace = true }
