[package]
name    = "rbtc-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rbtc-primitives = { workspace = true }
secp256k1       = { workspace = true }
sha1            = { workspace = true }
sha2            = { workspace = true }
sha3            = { workspace = true }
hmac            = { workspace = true }
ripemd          = { workspace = true }
thiserror       = { workspace = true }
bs58            = { workspace = true }
chacha20        = { workspace = true }
aes             = { workspace = true }
cbc             = { workspace = true }
siphasher       = { workspace = true }
rand            = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
hex        = { workspace = true }
