[package]
name    = "rbtc-mempool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rbtc-primitives = { workspace = true }
rbtc-crypto     = { workspace = true }
rbtc-consensus  = { workspace = true }
rbtc-script     = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
