[package]
name    = "rbtc-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rbtc-primitives = { workspace = true }
rbtc-crypto     = { workspace = true }
rbtc-consensus  = { workspace = true }
tokio           = { workspace = true }
bytes           = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
anyhow  = { workspace = true }
tokio   = { workspace = true }
