[package]
name    = "rbtc-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rbtc-primitives = { workspace = true }
rbtc-crypto     = { workspace = true }
rbtc-consensus  = { workspace = true }
tokio           = { workspace = true }
bytes           = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
anyhow          = { workspace = true }
siphasher       = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true }
serde_json = { workspace = true }
hex        = { workspace = true }
rbtc-wallet = { workspace = true }
