[package]
name    = "rbtc-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rbtc"
path = "src/main.rs"

[dependencies]
rbtc-primitives = { workspace = true }
rbtc-crypto     = { workspace = true }
rbtc-script     = { workspace = true }
rbtc-consensus  = { workspace = true }
rbtc-storage    = { workspace = true }
rbtc-net        = { workspace = true }
tokio           = { workspace = true }
clap            = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow          = { workspace = true }
