[package]
name    = "rbtc-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rbtc"
path = "src/main.rs"

[dependencies]
rbtc-primitives = { workspace = true }
rbtc-crypto     = { workspace = true }
rbtc-script     = { workspace = true }
rbtc-consensus  = { workspace = true }
rbtc-storage    = { workspace = true }
rbtc-net        = { workspace = true }
rbtc-mempool    = { workspace = true }
rbtc-wallet     = { workspace = true }
rbtc-miner      = { workspace = true }
rbtc-psbt       = { workspace = true }
tokio           = { workspace = true }
clap            = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow          = { workspace = true }
axum            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
hex             = { workspace = true }
