[package]
name    = "rbtc-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rbtc"
path = "src/main.rs"

[dependencies]
rbtc-primitives = { workspace = true }
rbtc-crypto     = { workspace = true }
rbtc-script     = { workspace = true }
rbtc-consensus  = { workspace = true }
rbtc-storage    = { workspace = true }
rbtc-net        = { workspace = true }
rbtc-mempool    = { workspace = true }
rbtc-wallet     = { workspace = true }
rbtc-miner      = { workspace = true }
rbtc-psbt       = { workspace = true }
tokio           = { workspace = true }
clap            = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow          = { workspace = true }
axum            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
hex             = { workspace = true }
secp256k1       = { workspace = true }
bs58            = { workspace = true }
bech32          = { workspace = true }
base64          = { workspace = true }
sha2            = { workspace = true }
siphasher       = { workspace = true }
libc            = "0.2"
rand            = { workspace = true }

[dev-dependencies]
tempfile = "3"
