[package]
name    = "rbtc-psbt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rbtc-primitives = { workspace = true }
rbtc-crypto     = { workspace = true }
rbtc-script     = { workspace = true }
rbtc-wallet     = { workspace = true }
secp256k1       = { workspace = true }
base64          = { workspace = true }
thiserror       = { workspace = true }
rand            = { workspace = true }

[dev-dependencies]
